--- a/app/views/buildsessionone.html
+++ b/app/views/buildsessionone.html
@@ -321,7 +321,7 @@ for (i = 0; i < coll.length; i++) {
 
 
     <input type="text" id="search-input" style="width: 280px; height: 35px; font-size: 16px; padding-left: 0px; float: left; margin-left: 100px; border-color: black; border-width: 1px; border-radius: 2px;">
-      <button  id="search-button" style="float: right;"> <img src="public/images/searchicon.PNG" width="24" height="24" style="padding-top:5px" />  </button>
+      <button  id="search-button" style="float: right;"> <img src="images/searchicon.PNG" width="24" height="24" style="padding-top:5px" />  </button>
     </div>
 
 
