--- a/app/views/buildsessionone.html
+++ b/app/views/buildsessionone.html
@@ -319,8 +319,8 @@ for (i = 0; i < coll.length; i++) {
     <div class="govuk-grid-column-one-half">
     <label class="govuk-label govuk-!-font-size-16" style="float: right; font-style: italic;"> Search by Customer reference or Title number </label><br><br>
 
-    <input type="text" id="search-input" style="width: 280px; height: 35px; font-size: 16px; padding-left: 0px; float: left; margin-left: 100px; border-color: black; border-width: 1px; border-radius: 2px;">
-      <button  id="search-button" style="float: right;"> <img src="public/images/searchicon.PNG" width="24" height="24" style="padding-top:5px" />  </button>
+    <input type="text" id="search-input" style="width: 280px; height: 35px; font-size: 16px; padding-left: 0px; float: left; margin-left: 40px; border-color: black; border-width: 1px; border-radius: 2px;">
+      <button  id="search-button" style="float: right; font-size: 19px;"> Search </button>
     </div>
 
 
@@ -328,7 +328,7 @@ for (i = 0; i < coll.length; i++) {
 <br>
 <br>
 <br>
-<a href="#" id="reset" style="float: right; padding-right: 15px;">Reset search and filters</a>
+<a href="#" id="reset" style="float: right; padding-right: 15px; padding-top: 15px; padding-bottom: 20px;">Reset search and filters</a>
 <br>
   </form>
   <br>
