menu background + rename session

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,11 +210,11 @@ for (i = 0; i < coll.length; i++) {
 
 
 <br>
-<a href="buildsessionone.html">
+<a href="sessionone.html">
 Session one V2 - Substantive + Prelim
 <br>
 <br>
-<a href="buildsessionone.html">
+<a href="#">
 Session one V2 - Prelim
 <br>
 <br>
