--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -132,7 +132,7 @@
 
   /* Style the button that is used to open and close the collapsible content */
   .collapsible {
-    background-color: white;
+    background-color: #FBFBFD;
     cursor: pointer;
     height: 30px;
     border: none;
