--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -149,7 +149,7 @@ a:visited {
 .filter {
   font-size: 16px;
   background-color: none;
-  border-color: black;
+  border-color: LIGHTGREY;
   border-radius: 2px;
   padding-left: 10px;
   padding-top: 10px;
