Session One Footer

--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -846,40 +846,26 @@ for (i = 0; i < coll.length; i++) {
 <div>
 *<a href="averagetimes.html" class="govuk-link" style="font-size: 14px;"> View average completion times </a>
 
-
 <div id="pagination" style="float: right;"></div>
 </div>
 
-
-
-
+</div>
+</div>
 </div>
 </div>
 
-
-</div>
-
-
-</div>
 <!-- Footer -->
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-  <br>
-  <br>
-  <hr>
 
+  <div style="align: center; padding-left: 75px; padding-right: 75px;">
 
-<br>
   <a href="#" style="text-color: grey; text-decoration: none;"> Terms and conditions</a>
   <a href="#" style="text-color: grey; text-decoration: none;">| Freedom of information</a>
   <a href="#" style="text-color: grey; text-decoration: none;">| © Crown copyright </a>
 
   <a style="float:right;" href="/prototype-admin/clear-data"> Clear data </a>
-  </div>
 
 
 </div>
-
 </div>
 
 
