footer and remove caption

--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -215,7 +215,7 @@ for (i = 0; i < coll.length; i++) {
 
 <!---CONTENT----------------------------------------------------------------->
 
-<h2 class="govuk-body govuk-!-font-size-21" style="font-family: arial; padding-top: 5px; font-style: italic;"> View your Portal applications. </h2>
+<h2 class="govuk-body govuk-!-font-size-21" style="font-family: arial; padding-top: 5px; font-style: italic;"></h2>
 
 <!--Filters & searches-->
 
@@ -856,8 +856,9 @@ for (i = 0; i < coll.length; i++) {
 
 <!-- Footer -->
 
-  <div style="align: center; padding-left: 75px; padding-right: 75px;">
+  <div style="align: center; padding-left: 100px; padding-right: 100px;">
     <hr>
+    <br>
 
   <a href="#" style="text-color: grey; text-decoration: none;"> Terms and conditions</a>
   <a href="#" style="text-color: grey; text-decoration: none;">| Freedom of information</a>
