--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -836,10 +836,10 @@ for (i = 0; i < coll.length; i++) {
 {% endmacro %}
 
 {{rows(1)}}
-{# {{rows(2)}}
+{{rows(2)}}
 {{rows(3)}}
 {{rows(4)}}
-{{rows(5)}} #}
+{{rows(5)}}
 
 </table>
 
