--- a/app/views/index.html
+++ b/app/views/index.html
@@ -211,16 +211,24 @@ for (i = 0; i < coll.length; i++) {
 
 <br>
 <a href="sessionone.html">
-Session one V2 - Substantive + Prelim
+Session one v2.0 - Substantive + Preliminary
 <br>
 <br>
-<a href="#">
-Session one V2 - Prelim
+<a href="sessiontwo.html">
+Session two - Preliminary
 <br>
 <br>
+
+
 
 <hr style="color: lightgrey; ">
-
+<br>
+<br>
+<br>
+<br>
+<a href="archive.html">
+Archive of iterations
+</a>
 </div>
 
 
