Changes to language
Dispositionary First Lease > New Lease

Dealing > Register Update

--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -241,13 +241,9 @@ for (i = 0; i < coll.length; i++) {
       },
       items: [
       {
-        value: "Dealing",
-        text: "Dealing"
+        value: "New Lease",
+        text: "New Lease"
       },
-        {
-          value: "Dispositionary First Lease",
-          text: "Dispositionary First Lease"
-        },
         {
           value: "Official Copies",
           text: "Official Copies"
@@ -261,9 +257,14 @@ for (i = 0; i < coll.length; i++) {
           text: "Official Search of Whole with Priority"
         },
         {
+          value: "Register Update",
+          text: "Register Update"
+        },
+        {
           value: "Search of the Index Map",
           text: "Search of the Index Map"
         },
+
         {
           value: "Transfer of Part",
           text: "Transfer of Part"
@@ -365,7 +366,7 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell" scope="row"> <img src="public/images/closedarrow.png" class="closedarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"><img src="public/images/openarrow.png" class="openarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"></td>
   <td class="govuk-table__cell" scope="row">LP123456 <!-- THIS IS PAGE {{page}} --></td>
   <td class="govuk-table__cell">Jones.20313</td>
-  <td class="govuk-table__cell">Dealing</td>
+  <td class="govuk-table__cell">Register Update</td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-15">15/06/19</td>
   <td class="govuk-table__cell" scope="row"><label class="govuk-tag--delayed">Delayed</label></td>
   <td class="govuk-table__cell" style="padding-left: 10px;"  data-sortable="2019-11-21"><label class="govuk-tag--delayed-date"> 21/11/19</label></td>
@@ -408,7 +409,7 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell" scope="row"> <img src="public/images/closedarrow.png" class="closedarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"><img src="public/images/openarrow.png" class="openarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"></td>
   <td class="govuk-table__cell" scope="row">LP980123</td>
   <td class="govuk-table__cell">Brown.12334</td>
-  <td class="govuk-table__cell">Dispositionary First Lease</td>
+  <td class="govuk-table__cell">New Lease</td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-04-01">01/04/19</td>
   <td  class="govuk-table__cell"> <t class="govuk-tag--progress"> Received </t></td>
   <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable="2019-08-01">01/08/19</td>
@@ -561,7 +562,7 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell" scope="row"> <img src="public/images/closedarrow.png" class="closedarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"><img src="public/images/openarrow.png" class="openarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"></td>
   <td class="govuk-table__cell" scope="row">LP451734</td>
   <td class="govuk-table__cell">Smith.20313</td>
-  <td class="govuk-table__cell">Dealing</td>
+  <td class="govuk-table__cell">Register Update</td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-12">12/06/19</td>
   <td class="govuk-table__cell"scope="row"> <label class="govuk-tag--delayed">Delayed </label> </td>
   <td class="govuk-table__cell" style="padding-left: 10px;"  data-sortable="2019-10-20"><label class="govuk-tag--delayed-date">20/10/19</label></td>
@@ -751,7 +752,7 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell" scope="row"> <img src="public/images/closedarrow.png" class="closedarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"><img src="public/images/openarrow.png" class="openarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"></td>
   <td class="govuk-table__cell" scope="row">LP890543</td>
   <td class="govuk-table__cell">Johnson.12334</td>
-  <td class="govuk-table__cell">Dealing</td>
+  <td class="govuk-table__cell">Register Update</td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-04-05">05/04/19</td>
   <td class="govuk-table__cell"> <label class="govuk-tag--complete">Complete</label> </td>
   <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable="2019-06-08">08/06/19</td>
@@ -795,7 +796,7 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell" scope="row"> <img src="public/images/closedarrow.png" class="closedarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"><img src="public/images/openarrow.png" class="openarrow" style="height: 40px; width: 40px; margin-right: -15px; padding-top: 4px;"></td>
   <td class="govuk-table__cell" scope="row">LP980123</td>
   <td class="govuk-table__cell">Colbrook.12334</td>
-  <td class="govuk-table__cell">Dispositionary First  Lease</td>
+  <td class="govuk-table__cell">New Lease</td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-05-01">01/05/19</td>
   <td  class="govuk-table__cell"> <label class="govuk-tag--complete">Complete</label> </td>
   <td class="govuk-table__cell"style="padding-left: 10px;"  data-sortable="2019-05-09">09/04/19</td>
