--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -382,7 +382,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">562.182.9891 </p></td>
+            <p style="font-size: 14px;">F010QGQ</p></td>
 
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
@@ -425,7 +425,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">98.986.HJ98B </p>
+            <p style="font-size: 14px;">P789TWY</p>
             </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
@@ -471,7 +471,7 @@ for (i = 0; i < coll.length; i++) {
                 <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
                 <b> HMLR Reference</b><br><br>
 
-                <p style="font-size: 14px;">980.907.A8H </p></td>
+                <p style="font-size: 14px;">L435JHK</p></td>
 
         <!-- Correspondence -->
               <td class="govuk-table__cell" colspan="2">
@@ -528,7 +528,7 @@ for (i = 0; i < coll.length; i++) {
 
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">823.003.432B </p>
+            <p style="font-size: 14px;">G812RAQ</p>
             </td>
 
     <!-- Correspondence -->
@@ -577,7 +577,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__row" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">872.143.1JA </p>
+            <p style="font-size: 14px;">B239HAZ</p>
             </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -624,7 +624,7 @@ for (i = 0; i < coll.length; i++) {
               <td class="govuk-table__row" colspan="2" style="padding-top: 0px;">
               <b> HMLR Reference</b>
               <br><br>
-              <p style="font-size: 14px;">982.988.129C </p>
+              <p style="font-size: 14px;">Y762WES</p>
               </td>
       <!-- Correspondence -->
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -676,7 +676,7 @@ for (i = 0; i < coll.length; i++) {
 
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">876.123.533W </p>
+            <p style="font-size: 14px;">F721LMQ</p>
             </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -724,7 +724,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__row" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">897.452.678Ks </p>
+            <p style="font-size: 14px;">X943HKJ</p>
 
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -768,7 +768,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">897.576.89M </p>
+            <p style="font-size: 14px;">S284HSK</p>
             </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
@@ -812,7 +812,7 @@ for (i = 0; i < coll.length; i++) {
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">982.876.456E </p>
+            <p style="font-size: 14px;">Y721JWQ</p>
             </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
