--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -183,6 +183,7 @@ a:visited {
       font-weight: bold;
       height: auto;
       text-align: left;
+      background: rgba(108,182,68,0.6);
       background-image: url(/public/images/worklist.png);
       background-repeat:  no-repeat;
       background-position: 190px 10px;
@@ -194,6 +195,7 @@ a:visited {
       border-radius: 3px;
       width: 250px;
       font-weight: bold;
+      background: rgba(108,182,68,0.6);
       height: auto;
       text-align: left;
       background-image: url(/public/images/pdf.png);
@@ -208,6 +210,4 @@ a:visited {
       font-size: 19px;
       border: transparent;
       padding-left: 10px;
-
-
     }
