--- a/app/views/portalhomev3.html
+++ b/app/views/portalhomev3.html
@@ -111,7 +111,13 @@
 
       <!--Additional menu-->
       <div style="padding-left: 10px;" id="submenu">
-
+      <hr size="1" width="80%" align="left">
+      <br>
+      <a style="font-size: 14px"><font color="#000000">Service hours</font></a><br>
+      <br>
+      <a style="font-size: 14px"><font color="#000000">Fair processing</font></a><br>
+      <br>
+      <a style="font-size: 14px"><font color="#000000">Personal information</font></a><br>
       </div>
 
   </div>
@@ -275,7 +281,7 @@ To change direct debit details, see <a href="#"> Administrative services </a>.
 </div>
 
 
-<div class="govuk-grid-column-one-half" style="margin-top: -450px; font-family: arial;">
+<div class="govuk-grid-column-one-half" style="margin-top: -475px; font-family: arial;">
 
 <h3>My Downloads </h3>
  No new items to be viewed  <br><br>
