--- a/app/views/DRAFTV3sessionone.html
+++ b/app/views/DRAFTV3sessionone.html
@@ -219,7 +219,8 @@ for (i = 0; i < coll.length; i++) {
 <div class="govuk-grid-row" style="margin-bottom: 20px;">
 
   <form id="search" style="">
-      <div class="govuk-grid-column-one-quarter" style="margin-top: 65px;" >
+      <div class="govuk-grid-column-one-quarter" style="margin-top: 25px;" >
+        <label class="govuk-label govuk-!-font-size-16 "> Filter by type</label>
 
         <div class="">
       {{ govukCheckboxes ({
@@ -228,7 +229,7 @@ for (i = 0; i < coll.length; i++) {
       classes: "govuk-checkboxes--small",
       fieldset: {
         legend: {
-          text: "Filter by type"
+          text: ""
         }
       },
       items: [
@@ -249,9 +250,9 @@ for (i = 0; i < coll.length; i++) {
     </div>
 
 
-    <div class="govuk-grid-column-one-quarter" style="margin-top: 65px;">
+    <div class="govuk-grid-column-one-quarter" style="margin-top: 25px;">
 
-      <label class="govuk-label govuk-!-font-size-16 govuk-visually-hidden"> Filter by progress</label>
+      <label class="govuk-label govuk-!-font-size-16 "> Filter by progress</label>
       <div class="">
 
     {{ govukCheckboxes({
@@ -260,7 +261,7 @@ for (i = 0; i < coll.length; i++) {
       classes: "govuk-checkboxes--small checkbox-progress govuk-table__row",
       fieldset: {
         legend: {
-          text: "Filter by progress"
+          text: ""
         }
       },
       items: [
@@ -301,7 +302,7 @@ for (i = 0; i < coll.length; i++) {
     </div>
 
     <div class="govuk-grid-column-one-half">
-    <label class="govuk-label govuk-!-font-size-14" style="font-style: italic; margin-left: 40px; float: left; margin-top: 20px;"> Search by Customer reference, Title number<br> or HMLR reference</label><br><br>
+    <label class="govuk-label govuk-!-font-size-16" style="font-style: ; margin-left: 40px; float: left; margin-top: 20px;"> Search by Customer reference, Title number<br> or HMLR reference</label><br><br>
 
     <input type="text" id="search-input" style="width: 270px; height: 35px; font-size: 14px; padding-left: 10px; float: left; margin-left: 40px; border-color: black; border-width: 1px; border-radius: 2px;">
       <button  id="search-button" style="float: right; font-size: 19px;"> Search </button>
