--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -21,7 +21,7 @@ $govuk-page-width: 1200px;
   color: white;
   padding-left: 5px;
   padding-right: 5px;
-  padding-bottom: 5px
+  padding-bottom: 5px;
   padding-top: 5px;
   font-weight: bold;
 }
