--- a/app/views/sessionone.html
+++ b/app/views/sessionone.html
@@ -199,7 +199,7 @@ for (i = 0; i < coll.length; i++) {
 <!-- Service title -->
 
 <div class="govuk-grid-column-three-quarters">
-<h1 class="govuk-body govuk-!-font-size-27" style="font-family: arial; padding-top: 5px;"> View my applications </h1>
+<h1 class="govuk-body govuk-!-font-size-27" style="font-family: arial; padding-top: 5px;"> View My Applications </h1>
 
 
 
