--- a/app/views/index.html
+++ b/app/views/index.html
@@ -210,11 +210,13 @@ for (i = 0; i < coll.length; i++) {
 
 
 <br>
-<a href="sessionone.html">
-Session one V2 - Substantive + Prelim
+<a href="sessiononeA.html">
+Session one A
 
 <br>
 <br>
+<a href="sessiononeB.html">
+Session one B
 
 <hr style="color: lightgrey; ">
 
