--- a/app/views/sessiononeB.html
+++ b/app/views/sessiononeB.html
@@ -336,7 +336,6 @@ for (i = 0; i < coll.length; i++) {
 <th class="govuk-table__header govuk-!-width-one-sixth " scope="col">Application type</th>
 <th class="govuk-table__header govuk-!-width-one-sixth  sortable" scope="col">Received by HMLR</th>
 <th class="govuk-table__header govuk-!-width-one-quarter  " scope="col">Application progress</th>
-<th class="govuk-table__header govuk-!-width-one-sixth  sortable" scope="col">Estimated completion</th>
 <th class="govuk-table__header govuk-!-width-one-twelfth " scope="col"></th>
 </tr>
 </thead>
@@ -354,7 +353,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Register Update<p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-15">15/06/19</td>
   <td class="govuk-table__cell" scope="row">Delayed - Prior Pending Applications(s) or Official Search(es)</td>
-  <td class="govuk-table__cell" style="padding-left: 10px;"  data-sortable="2019-11-21">21/11/19</td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -402,7 +400,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">New Lease <p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-04-01">01/04/19</td>
   <td  class="govuk-table__cell"> <t class="govuk-tag--progress"> Received: Priority Protected - Awaiting Processing</t></td>
-  <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable="2019-08-01">01/08/19</td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -410,19 +407,13 @@ for (i = 0; i < coll.length; i++) {
 
     <tr class="govuk-table__row expandy-row hide-row">
       <!-- Vertical line -->
-      <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 230px;"></div></td>
+      <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 175px;"></div></td>
       <div>
       <!-- HMLR reference -->
-              <td class="govuk-table__cell" colspan="3" style="padding-top: 10px;">
+              <td class="govuk-table__cell" colspan="3" style="padding-top: 10px; vertical-align: top;">
               <b> HMLR Reference</b>
               <br><br>
               <p style="font-size: 14px;">S827LKJ</p>
-              <br><br><br><br>
-              <b>Correspondence</b>
-              <p style="font-size: 14px;"><br>
-              <a href="#"></a><br>
-              <a href="#"></a>
-            </p><br>
               </td>
 
       <td class="govuk-table__cell" colspan="3" style="vertical-align: top;">
@@ -431,11 +422,7 @@ for (i = 0; i < coll.length; i++) {
         01/08/19
         <br><br><p style="font-size: 13px;">
         These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
-
-
-
-          <b>Files</b>
-          <p style="font-size: 14px;"></p></td>
+        </td>
         </div>
 
         </tr>
@@ -450,7 +437,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Official Copies <p class="govuk-visually-hidden"> Preliminary </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-01-01">01/01/19</td>
   <td class="govuk-table__cell" scope="row">Completed</td>
-  <td class="govuk-table__cell" style="padding-left: 10px;">  </td>
     <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -488,7 +474,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Official Search of Whole with Priority<p class="govuk-visually-hidden"> Preliminary </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-13">13/06/19</td>
   <td  class="govuk-table__cell" scope="row"><text class="govuk-tag--complete">Completed</text></td>
-  <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable=""></td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -531,7 +516,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Register Update<p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-12">12/06/19</td>
   <td class="govuk-table__cell"scope="row">Delayed - Extension of Time Granted </td>
-  <td class="govuk-table__cell" style="padding-left: 10px;"  data-sortable="2019-10-20">20/10/19</td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -578,7 +562,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Transfer of Part<p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-06-12">12/06/19</td>
   <td class="govuk-table__cell"> <t class="govuk-tag--progress"> Received: Priority Protected - Set-up activity underway </t> </td>
-  <td class="govuk-table__cell"style="padding-left: 10px;"  data-sortable="2019-08-15"> 15/08/19</td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -616,7 +599,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Official Search of Part with Priority<p class="govuk-visually-hidden"> Preliminary </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-05-10">10/05/19</td>
   <td class="govuk-table__cell">Cancelled</td>
-  <td class="govuk-table__cell"style="padding-left: 10px;"></td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -661,7 +643,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Search of the Index Map<p class="govuk-visually-hidden"> Preliminary </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-05-11">11/05/19</td>
   <td  class="govuk-table__cell">Completed</td>
-  <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable=""></td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -696,7 +677,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">Register Update<p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-04-05">05/04/19</td>
   <td class="govuk-table__cell"> <label class="govuk-tag--complete">Completed</label> </td>
-  <td class="govuk-table__cell"style="padding-left: 10px;" data-sortable="2019-06-08">08/06/19</td>
   <td class="govuk-table__cell" scope="row"><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
@@ -744,7 +724,6 @@ for (i = 0; i < coll.length; i++) {
   <td class="govuk-table__cell">New Lease<p class="govuk-visually-hidden"> Substantive </p></td>
   <td class="govuk-table__cell" scope="row" data-sortable="2019-05-01">01/05/19</td>
   <td  class="govuk-table__cell"> <label class="govuk-tag--complete">Completed</label> </td>
-  <td class="govuk-table__cell"style="padding-left: 10px;"  data-sortable="2019-05-09">09/04/19</td>
   <td class="govuk-table__cell" scope="row" ><a class="expandy-row-trigger" href="#">View details</a></td>
   </tr>
 
