--- a/app/views/sessiononeA.html
+++ b/app/views/sessiononeA.html
@@ -339,6 +339,7 @@ for (i = 0; i < coll.length; i++) {
 <th class="govuk-table__header govuk-!-width-one-sixth  sortable" scope="col">Estimated completion</th>
 <th class="govuk-table__header govuk-!-width-one-twelfth " scope="col"></th>
 </tr>
+<tr class="govuk-table__row"><p style="font-size: 14px; float: right;"> For details of estimated completion dates, see <a href="averagetimes.html">Average Completion Time data</a>. Dates may change. </p> </th>
 </thead>
 
 
