--- a/app/views/sessiononeB.html
+++ b/app/views/sessiononeB.html
@@ -65,7 +65,7 @@
     <div class="item"><a class="link">Official Search of Whole without Priority</a></div>
     <div class="item"><a class="link">Local Land Charges Search</a></div>
     <div class="item"><a class="link">MapSearch *** FREE ***</a></div>
-    <div class="item"><a class="link">Application Enquiry *** FREE ***</a></div>
+    <div class="item"><a class="link">Average *** FREE ***</a></div>
     <div class="item"><a class="link">Search of the Index Map</a></div>
     <div class="item"><a class="link">Home Rights Search</a></div>
     <div class="item"><a class="link">Search Index of Relating Franchises and Manors</a></div>
@@ -380,7 +380,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       21/11/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 
 
 
@@ -421,7 +421,7 @@ for (i = 0; i < coll.length; i++) {
         <br><br>
         01/08/19
         <br><br><p style="font-size: 13px;">
-        These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+        These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
         </td>
         </div>
 
@@ -542,7 +542,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       20/10/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 
 
 
@@ -582,7 +582,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       15/08/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 </td>
       </div>
 
@@ -702,7 +702,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       08/06/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 
 
 
@@ -746,7 +746,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       09/04/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Application Enquiry Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 
 
 
