--- a/app/views/sessiononeB.html
+++ b/app/views/sessiononeB.html
@@ -380,7 +380,7 @@ for (i = 0; i < coll.length; i++) {
       <br><br>
       21/11/19
       <br><br><p style="font-size: 13px;">
-      These dates are calculated using <a class="govuk-link" href="averagetimes.html">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
+      These dates are calculated using <a class="govuk-link" href="https://www.gov.uk/government/publications/hm-land-registry-service-standards/our-service-standards#average-completion-times">Average Completion Times data.</a> Dates may change depending on current wait times and the status of an application. </P>
 
 
 
