--- a/app/views/sessionC.html
+++ b/app/views/sessionC.html
@@ -202,16 +202,11 @@ for (i = 0; i < coll.length; i++) {
 <h1 class="govuk-body govuk-!-font-size-27" style="font-family: arial; padding-top: 5px;"> View My Applications </h1>
 
 
-
-
-
 <!---CONTENT----------------------------------------------------------------->
 
 <!-- <h2 class="govuk-body govuk-!-font-size-21" style="font-family: arial; padding-top: 5px; font-style: italic;"></h2> -->
 
 <!--Filters & searches-->
-
-
 
 
 <div>
@@ -250,7 +245,7 @@ for (i = 0; i < coll.length; i++) {
 
       {
         value: "Substantive",
-        text: "Substantive applications (Creating or changing an  entry on the register)",
+        text: "Substantive applications (Creating or changing an entry on the register)",
         checked: true
 
       }
@@ -336,13 +331,13 @@ for (i = 0; i < coll.length; i++) {
 <th class="govuk-table__header govuk-!-width-one-sixth sortable" scope="col">Received by HMLR</th>
 <th class="govuk-table__header govuk-!-width-one-sixth  " scope="col">Application progress</th>
 <th class="govuk-table__header govuk-!-width-one-sixth sortable" scope="col">Estimated completion</th>
-<th class="govuk-table__header govuk-!-width-one-twelfth" scope="col" style="width: 7%; font-weight: normal;">Open all</th>
+<th class="govuk-table__header govuk-!-width-one-twelfth " scope="col" style="width: 6%; font-weight:;">View</th>
+</tr>
+<tr class="govuk-table__row"><p style="font-size: 14px; float: left;"> Estimated completion dates are calculated using <a class="govuk-link" href="https://www.gov.uk/government/publications/hm-land-registry-service-standards/our-service-standards#average-completion-times">Average completion times.</a><br> Dates may change depending on current wait times and the status of an application. </p> </th>
+  <a href="#" id="reset" class="govuk-link" style="float: right; font-size: 14px; margin-top: 20px;">Reset search and filters</a>
 </tr>
 </thead>
-<tr class="govuk-table__row"><p style="font-size: 14px; float: left;"> Estimated completion dates are calculated using <a class="govuk-link" href="https://www.gov.uk/government/publications/hm-land-registry-service-standards/our-service-standards#average-completion-times">Average completion times.</a><br> Dates may change depending on current wait times and the status of an application. </p> </th>
-  <a href="#" id="reset" class="govuk-link" style="float: right; padding-right: 15px; padding-top: 15px; padding-bottom: 20px; font-size: 14px;">Reset search and filters</a>
 
-</tr>
 
 
 <p id="nofiltermessage"></p>
